--- a/exercise1.html
+++ b/exercise1.html
@@ -1,21 +1,68 @@
-<!DOCTYPE html>
-
-<html lang="en">
 
 <head>
 
+ 
+<!--  
+At least one hyperlink <a>
+At least one paragraph tag <p>
+At least one header element: <h1>, <h2>, <h3>, <h4>, <h5>, and/or <h6>
+At least one line break <br>
+At least one non-breaking-space entity &nbsp;
+At least one ordered list <ol>
+At least one unordered list <ul>
+At least some text that is bold: <b> or <strong>
+At least some text that is in italics <em>
+  -->
+
 <meta charset="UTF-8">
 
-<title>My HTML Document</title>
-
+  <h1>Llamas</h1>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
 </head>
 
 <body>
+<a></a>
+  <a href="https://en.wikipedia.org/wiki/Llama#:~:text=Lamoids%2C%20or%20llamas%20(as%20they,domestic%20llama%20(Lama%20glama)">Original Wikipedia Page with Information</a> <br>
 
-<p>A very basic HTML page</p>
+<p>The llama (/ˈlɑːmə/; Spanish pronunciation: [ˈʎama] or [ˈʝama]) (Lama glama) is a domesticated South American camelid, widely used as a meat and pack animal by Andean cultures since the pre-Columbian era.
+<br><br>
+Llamas are social animals and live with others as a herd. Their wool is soft and contains only a small amount of lanolin. Llamas can learn simple tasks after a few repetitions. When using a pack, they can carry about 25 to 30% of their body weight for 8 to 13 km (5–8 miles). The name llama (in the past also spelled "lama" or "glama") was adopted by European settlers from native Peruvians.
+<br><br>
+The ancestors of llamas are thought to have originated from the Great Plains of North America about 40 million years ago, and subsequently migrated to South America about three million years ago during the Great American Interchange. By the end of the last ice age (10,000–12,000 years ago), camelids were extinct in North America. As of 2007, there were over seven million llamas and alpacas in South America and over 158,000 llamas and 100,000 alpacas, descended from progenitors imported late in the 20th century, in the United States and Canada.
+<br><br>
+In Aymara mythology, llamas are important beings. The Heavenly Llama is said to drink water from the ocean and urinates as it rains. According to Aymara eschatology, llamas will return to the water springs and lagoons where they come from at the end of time.</p>
+  <br>
+  <h2> Behavior </h2>
+  <p> Llamas that are well-socialized and trained to halter and lead after weaning are very friendly and pleasant to be around. They are extremely curious and most will approach people easily. However, llamas that are bottle-fed or over-socialized and over-handled as youth will become extremely difficult to handle when mature, when they will begin to treat humans as they treat each other, which is characterized by bouts of spitting, kicking and neck wrestling.[33]
+<br><br>
+Llamas have started showing up in nursing homes and hospitals as certified therapy animals. Rojo the Llama, located in the Pacific Northwest was certified in 2008. The Mayo Clinic says animal-assisted therapy can reduce pain, depression, anxiety, and fatigue. This type of therapy is growing in popularity, and there are several organizations throughout the United States that participate. [34]
+<br><br>
+When correctly reared, llamas spitting at a human is a rare thing. Llamas are very social herd animals, however, and do sometimes spit at each other as a way of disciplining lower-ranked llamas in the herd. A llama's social rank in a herd is never static. They can always move up or down in the social ladder by picking small fights. This is usually done between males to see which will become dominant. Their fights are visually dramatic, with spitting, ramming each other with their chests, neck wrestling and kicking, mainly to knock the other off balance. The females are usually only seen spitting as a means of controlling other herd members. One may determine how agitated the llama is by the materials in the spit. The more irritated the llama is, the further back into each of the three stomach compartments it will try to draw materials from for its spit.
+<br><br>
+While the social structure might always be changing, they live as a family and they do take care of each other. If one notices a strange noise or feels threatened, an alarm call - a loud, shrill sound which rhythmically rises and falls - is sent out and all others become alert. They will often hum to each other as a form of communication.
+<br><br>
+The sound of the llama making groaning noises or going "mwa" (/mwaʰ/) is often a sign of fear or anger. Unhappy or agitated llamas will lay their ears back, while ears being perked upwards is a sign of happiness or curiosity.
+<br><br>
+An "orgle" is the mating sound of a llama or alpaca, made by the sexually aroused male. The sound is reminiscent of gargling, but with a more forceful, buzzing edge. Males begin the sound when they become aroused and continue throughout copulation.[35][36]</p>
 
+  <h2>Types&nbsp;of&nbsp;Llamas</h2>
+  <ul>
+    <b>
+  <li>Classic Llama.</li>
+  <li>Wooly Llama.</li>
+  <li>Medium Llama</li>
+  <li>Suri alpaca</li>
+    </b>
+</ul>
+  <h2>4 Species&nbsp;of&nbsp;Llamas</h2>
+  <ol><em>
+    <li>Alpacas</li>
+    <li>Llamas</li>
+    <li>Vicuña</li>
+    <li>Guanaco</li>
+    </em>
+  </ol>
 </body>
 
 </html>
