--- a/exercise1.html
+++ b/exercise1.html
@@ -2,20 +2,10 @@
 <head>
 
  
-<!--  
-At least one hyperlink <a>
-At least one paragraph tag <p>
-At least one header element: <h1>, <h2>, <h3>, <h4>, <h5>, and/or <h6>
-At least one line break <br>
-At least one non-breaking-space entity &nbsp;
-At least one ordered list <ol>
-At least one unordered list <ul>
-At least some text that is bold: <b> or <strong>
-At least some text that is in italics <em>
-  -->
 
 <meta charset="UTF-8">
 
+  <title>Llamas</title>
   <h1>Llamas</h1>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
