--- a/Project 1: Hypertext Narrative/about.html
+++ b/Project 1: Hypertext Narrative/about.html
@@ -115,7 +115,7 @@ body {
   <div class="navbar">
   <br><br>
 	<ul align=right id="rcorners1">
-  <li><a href="home.html" href="index.html">HOME</a></li>
+  <li><a href="index.html">HOME</a></li>
   <li><a href="projects.html">PROJECTS</a></li>
   <li><a href="contact.html">CONTACT</a></li>
   <li><a class="active" href="about.html">ABOUT</a>
