--- a/Project 1: Hypertext Narrative/contact.html
+++ b/Project 1: Hypertext Narrative/contact.html
@@ -29,7 +29,7 @@ li {
 li a {
   display: block;
   color: #e7e747;
-  padding: 8px 50px;
+  padding: 10px;
   text-decoration: none;
   font-size:2vw;
 }
@@ -118,6 +118,7 @@ body {
 	<ul align=right id="rcorners1">
   <li><a href="index.html" href="index.html">HOME</a></li>
   <li><a href="projects.html">PROJECTS</a></li>
+  <li><a class="active" href="jobs.html">RESUME</a>
   <li><a class="active" href="contact.html">CONTACT</a>
   <li><a href="about.html">ABOUT</a></li>
 </ul>
