--- a/Project 1: Hypertext Narrative/contact.html
+++ b/Project 1: Hypertext Narrative/contact.html
@@ -118,7 +118,7 @@ body {
 	<ul align=right id="rcorners1">
   <li><a href="index.html" href="index.html">HOME</a></li>
   <li><a href="projects.html">PROJECTS</a></li>
-  <li><a class="active" href="jobs.html">RESUME</a>
+  <li><a href="jobs.html">RESUME</a>
   <li><a class="active" href="contact.html">CONTACT</a>
   <li><a href="about.html">ABOUT</a></li>
 </ul>
