--- a/Project 1: Hypertext Narrative/about.html
+++ b/Project 1: Hypertext Narrative/about.html
@@ -117,7 +117,7 @@ body {
 	<ul align=right id="rcorners1">
   <li><a href="index.html">HOME</a></li>
   <li><a href="projects.html">PROJECTS</a></li>
-  <li><a class="active" href="jobs.html">RESUME</a>
+  <li><a href="jobs.html">RESUME</a>
   <li><a href="contact.html">CONTACT</a></li>
   <li><a class="active" href="about.html">ABOUT</a>
     
