--- a/animation/index.html
+++ b/animation/index.html
@@ -5,7 +5,40 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+In a pineapple under the sea,
+A sponge named Bob, so full of glee.
+With friends and adventures, oh so grand,
+In Bikini Bottom, a magical land.
 
+His square pants and his bubbly smile,
+An oceanic world, where dreams compile.
+With Patrick, the starfish, dim but dear,
+They navigate waters, far and near.
+
+Jellyfish fields, a glowing delight,
+SpongeBob's laughter, a beacon so bright.
+Krusty Krab, where patties sizzle,
+Under the sea, where dreams sizzle.
+
+Sandy Cheeks, a Texan surprise,
+In a water-filled dome, beneath the skies.
+Bubbles and squabbles, life's constant dance,
+In Bikini Bottom, where seahorses prance.
+
+Plankton's schemes and Squidward's grump,
+In the underwater city, where friendships bump.
+Yet SpongeBob's spirit, resilient and strong,
+Like the tide, it carries him along.
+
+From the Krusty Krab to Goo Lagoon,
+In Bikini Bottom, under the moon.
+A pineapple house, a snail named Gary,
+In this oceanic tale, where joy isn't wary.
+
+So, here's to SpongeBob, the sponge so square,
+With laughter and joy, beyond compare.
+In the depths of the sea, where corals gleam,
+A whimsical world inspired by a sponge's dream.
   </head>
   <body>
     <main>
