--- a/animation/index.html
+++ b/animation/index.html
@@ -8,40 +8,35 @@
   </head>
   <body>
     <main>
-      In a pineapple under the sea,
-A sponge named Bob, so full of glee.
-With friends and adventures, oh so grand,
-In Bikini Bottom, a magical land.
+     In a palette of hues, vibrant and bright,<br>
+Green triangles dance with orange light.<br>
+A playful alliance, a visual trance,<br>
+Geometry's waltz in a colorful dance.<br><br>
 
-His square pants and his bubbly smile,
-An oceanic world, where dreams compile.
-With Patrick, the starfish, dim but dear,
-They navigate waters, far and near.
+Green, the hue of nature's embrace,<br>
+Triangular leaves in a sunlit space.<br>
+Emerald canopies, a verdant sea,<br>
+In the tapestry of a forest's decree.<br><br>
 
-Jellyfish fields, a glowing delight,
-SpongeBob's laughter, a beacon so bright.
-Krusty Krab, where patties sizzle,
-Under the sea, where dreams sizzle.
+Orange, a flame in the setting sun,<br>
+Triangular warmth when the day is done.<br>
+Citrus groves in the evening glow,<br>
+A twilight symphony, a nature's show.<br><br>
 
-Sandy Cheeks, a Texan surprise,
-In a water-filled dome, beneath the skies.
-Bubbles and squabbles, life's constant dance,
-In Bikini Bottom, where seahorses prance.
+Triangles entwined, a chromatic fusion,<br>
+Green and orange, a visual illusion.<br>
+In a kaleidoscope of shapes and shades,<br>
+Nature's geometry in quiet cascades.<br><br>
 
-Plankton's schemes and Squidward's grump,
-In the underwater city, where friendships bump.
-Yet SpongeBob's spirit, resilient and strong,
-Like the tide, it carries him along.
+Meadows adorned with green pyramids,<br>
+Sunsets painted with orange grids.<br>
+A collaboration, a vivid affair,<br>
+In the canvas of life, a radiant pair.<br><br>
 
-From the Krusty Krab to Goo Lagoon,
-In Bikini Bottom, under the moon.
-A pineapple house, a snail named Gary,
-In this oceanic tale, where joy isn't wary.
-
-So, here's to SpongeBob, the sponge so square,
-With laughter and joy, beyond compare.
-In the depths of the sea, where corals gleam,
-A whimsical world inspired by a sponge's dream.
+So, let the triangles twirl and play,<br>
+In the realms of color, where they sway.<br>
+Green and orange, a visual delight,<br>
+Triangles dancing in the soft twilight.<br><br>
     </main>
     <script src="sketch.js"></script>
   </body>
