--- a/animation/index.html
+++ b/animation/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <main>
+    <main align="left">
      In a palette of hues, vibrant and bright,<br>
 Green triangles dance with orange light.<br>
 A playful alliance, a visual trance,<br>
@@ -38,6 +38,6 @@ In the realms of color, where they sway.<br>
 Green and orange, a visual delight,<br>
 Triangles dancing in the soft twilight.<br><br>
     </main>
-    <script src="sketch.js"></script>
+    <script src="sketch.js" align="right"></script>
   </body>
 </html>
