--- a/animation/index.html
+++ b/animation/index.html
@@ -8,48 +8,46 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <main>
        <h1>Chromatic Ballet: Ode to Green and Orange Triangles</h1>    
     <div>
-        <p>
-        In a palette of hues, vibrant and bright,
-Green triangles dance with orange light.
-A playful alliance, a visual trance,
-Geometry's waltz in a colorful dance.
-        </p>
-      <p>
-       Green, the hue of nature's embrace,
-Triangular leaves in a sunlit space.
-Emerald canopies, a verdant sea,
-In the tapestry of a forest's decree.
-        </p>
-      <p>
-      Orange, a flame in the setting sun,
-Triangular warmth when the day is done.
-Citrus groves in the evening glow,
-A twilight symphony, a nature's show.
-        </p>
-      <p>
-      Triangles entwined, a chromatic fusion,
-Green and orange, a visual illusion.
-In a kaleidoscope of shapes and shades,
-Nature's geometry in quiet cascades.
-        </p>
-       <p>
-     Meadows adorned with green pyramids,
-Sunsets painted with orange grids.
-A collaboration, a vivid affair,
-In the canvas of life, a radiant pair.
-        </p>
-       <p>
-      So, let the triangles twirl and play,
-In the realms of color, where they sway.
-Green and orange, a visual delight,
-Triangles dancing in the soft twilight.
-        </p>
+           <p>
+           In a palette of hues, vibrant and bright, <br>
+   Green triangles dance with orange light.<br>
+   A playful alliance, a visual trance,<br>
+   Geometry's waltz in a colorful dance.<br><br>
+           </p>
+         <p>
+          Green, the hue of nature's embrace,<br>
+   Triangular leaves in a sunlit space.<br>
+   Emerald canopies, a verdant sea,<br>
+   In the tapestry of a forest's decree.<br><br>
+           </p>
+         <p>
+         Orange, a flame in the setting sun,<br>
+   Triangular warmth when the day is done.<br>
+   Citrus groves in the evening glow,<br>
+   A twilight symphony, a nature's show.<br><br>
+           </p>
+         <p>
+         Triangles entwined, a chromatic fusion,<br>
+   Green and orange, a visual illusion.<br>
+   In a kaleidoscope of shapes and shades,<br>
+   Nature's geometry in quiet cascades.<br><br>
+           </p>
+          <p>
+        Meadows adorned with green pyramids,<br>
+   Sunsets painted with orange grids.<br>
+   A collaboration, a vivid affair,<br>
+   In the canvas of life, a radiant pair.<br><br>
+           </p>
+          <p>
+         So, let the triangles twirl and play,<br>
+   In the realms of color, where they sway.<br>
+   Green and orange, a visual delight,<br>
+   Triangles dancing in the soft twilight.<br><br>
+           </p>
     </div>
     
-    </main>
     <div>
     <script src="sketch.js" ></script>
        </div>
