--- a/animation/index.html
+++ b/animation/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
   </head>
-  <body>
+   <center>
+  <body bgcolor="#8FBC8F">
        <h1>Chromatic Ballet: Ode to Green and Orange Triangles</h1>    
     <div>
            <p>
@@ -52,4 +53,5 @@
     <script src="sketch.js" ></script>
        </div>
   </body>
+      </center>
 </html>
