--- a/animation/index.html
+++ b/animation/index.html
@@ -49,7 +49,7 @@
            </p>
     </div>
     
-    <div>
+    <div align="center">
     <script src="sketch.js" ></script>
        </div>
   </body>
