--- a/animation/index.html
+++ b/animation/index.html
@@ -48,10 +48,11 @@
    Triangles dancing in the soft twilight.<br><br>
            </p>
     </div>
-    
+    <center>
     <div align="center">
-    <script src="sketch.js" ></script>
+    <script src="sketch.js" align="center"></script>
        </div>
+       </center>
   </body>
       </center>
 </html>
