--- a/animation/index.html
+++ b/animation/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
   </head>
+   <style>
+#parent {
+width: 30%;
+margin: 0 auto;
+}
+</style>
    <center>
   <body bgcolor="#8FBC8F">
        <h1>Chromatic Ballet: Ode to Green and Orange Triangles</h1>    
@@ -49,7 +55,7 @@
            </p>
     </div>
     <center>
-    <div align="center">
+    <div align="center" id="parent">
     <script src="sketch.js" align="center"></script>
        </div>
        </center>
