--- a/netartexhibition/index.html
+++ b/netartexhibition/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <link href='https://fonts.googleapis.com/css?family=Barriecito' rel='stylesheet'>
-  
+  <title>SAVED - Net Art Exhibition </title>
   <head>
      <style>
     body {
