--- a/netartexhibition/index.html
+++ b/netartexhibition/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
    <link href='https://fonts.googleapis.com/css?family=Barriecito' rel='stylesheet'>
-  <title>SAVED - Net Art Exhibition </title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&display=swap" rel="stylesheet">
+  
   <head>
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+
+
      <style>
     body {
-        font-family: 'Barriecito';font-size: 22px; color: aliceblue;
+        font-family: 'Barriecito';color: aliceblue;
         }
         #parent {
         width: 30%;
         margin: 0 auto;
         }
+    p{
+      font-family: 'Rajdhani'; 
+      color: aliceblue;
+      text-indent: 25px;
+    }
 
     .container {
         display: flex;
@@ -34,35 +45,25 @@
    
   <body style="background-image: url('p2.jpg');   background-repeat: no-repeat; background-size: cover;">
         <h1 style="font-size: 100px; text-align: center;">SAVED</h1>
-        <p style="text-indent: 25px;">
+        <h1 style="font-size: 50px; text-align: center;">CURATED BY ADA LIN</h1>
+        <p style="text-indent: 25px; font-size: 20px;">
             This exhibition features three net.art projects that are united by the common theme of preserving a part of history into an online art piece. Although the subjects of the art projects are drastically different, these artists worked to gather their material to be uniquely presented in net.art form and be interactive either virtually or physically. 
         </p>
-        <p style="text-indent: 25px;">
-            Morehshin Allahyari's digital resurrection project introduces viewers to a space where the past converges with the present. By 3D-printing replicas of artifacts destroyed by ISIS, Allahyari not only reconstructs cultural heritage but also challenges perceptions of memory and authenticity in the digital age. Her work prompts contemplation on the role of technology in both preserving and reshaping narratives that risk being lost. 
-
-        </p>
-        <p style="text-indent: 25px;">
-            Antoni Muntadas, with "The File Room," brought focus on censorship and knowledge dissemination. Through the creation of an immersive installation and an online database known as The File Room, Muntadas compiled together a documentation of global instances of censorship. Muntadas’ work draws importance on critical examination of institutional authority in the digital age. 
-
-        </p>
-        <p style="text-indent: 25px;">
-            Cameron Askin's creation, "Cameron's World," serves as a digital preservation of the early internet's visual aesthetics. “Cameron’s World” features over 700 images that are all organized into thematic rows. The website essentially works as a curated gallery of the early internet. By putting together a plethora of elements such as, blinking texts, animated cursors, MIDI files, and nostalgic GIFs, Askin not only pays tribute to the internet's formative years but also prompts a reflection on the importance of preserving the unique and often quirky design trends of that time. In crafting this vibrant web collage, Askin acts as a digital curator, preserving the artifacts of the early internet and offering viewers a nostalgic journey through the visual landscape that once defined the online experience.
-
-        </p>
-        <p style="text-indent: 25px;">
-            Upon close examination of the pieces from Morehshin Allahyari, Antoni Muntadas, and Cameron Askin, a common thread emerges — the profound impact of preservation in our digital age. Allahyari's digital resurrection project not only reconstructs cultural heritage but also challenges our understanding of memory and authenticity in the face of destruction. Muntadas, through "The File Room," directs our attention to the power dynamics in censorship and the need for critical examination of institutional authority. In a different yet equally significant domain, Askin's "Cameron's World" becomes a digital archive, preserving the visual aesthetics of the early internet. Together, these projects reveal the pivotal role of technology in preserving and reshaping all types of history. As we navigate the realms of cultural heritage, censorship, and internet evolution, these endeavors collectively highlight the importance of intentional and thoughtful preservation in our fast-paced and technologically driven world.
-
-        </p>
-        <h1 style="font-size: 70px; text-align: center;">CURATED PIECES</h1>
+        
         <div class="container">
             <div class="image">
                 <a href="https://morehshin.com/material-speculation-isis/">
               <img src="3d.png" >
             </a>
+            <p style="text-indent: 4px; font-size: 20px; ">
+              Morehshin Allahyari, "Material Speculation: ISIS​" (2015-2016)
+          </p>
             </div>
             <div class="text">
-              <p>This project aimed to digitally recreate artifacts destroyed by ISIS. After extensive research, Morehshin Allahyari reconstructed 12 items using 3D printing, incorporating memory cards with research documents, videos, email correspondence, and 3D-printable files. The objective is to reintegrate these replicated artifacts into Middle Eastern institutions, restoring both the objects and the cultural significance they embody to their original location.</p>
-            </div>
+              <p style="text-indent: 0px; text-indent: 25px;">
+                Morehshin Allahyari's digital resurrection project introduces viewers to a space where the past converges with the present. By 3D-printing replicas of artifacts destroyed by ISIS, Allahyari not only reconstructs cultural heritage but also challenges perceptions of memory and authenticity in the digital age. Her work prompts contemplation on the role of technology in both preserving and reshaping narratives that risk being lost. 
+            </p>
+              </div>
           </div>
           <br>
           <br>
@@ -71,9 +72,14 @@
                 <a href="https://sites.rhizome.org/anthology/thefileroom.html">
                     <img src="fileroom.png" >
                   </a>
+                  <p style="text-indent: 0px; font-size: 20px; ">
+                    Antoni Muntadas, "The File Room" (1994-1998)
+                </p>
             </div>
             <div class="text">
-              <p>Antoni Muntadas created an immersive installation and online database that documented instances of censorship globally. Visitors were encouraged to add their own examples. The File Room suggested alternative approaches to knowledge and communal memory, diverging from hierarchical, institutionally sanctioned methods. This occurred years before Wikipedia's inception, during a time when widespread internet access was not commonplace.
+              <p style="text-indent: 25px;">
+                Antoni Muntadas, with "The File Room," brought focus on censorship and knowledge dissemination. Through the creation of an immersive installation and an online database known as The File Room, Muntadas compiled together a documentation of global instances of censorship. Muntadas’ work draws importance on critical examination of institutional authority in the digital age. 
+    
             </p>
             </div>
           </div>
@@ -84,13 +90,21 @@
                 <a href="https://www.cameronsworld.net/">
                     <img src="cameron.png" >
                   </a>
+                  <p style="text-indent: 0px; font-size: 20px; ">
+                    Cameron Askin, "Cameron's World" (1994-2009)
+                </p>
             </div>
             <div class="text">
-              <p>Cameron Askin created "Cameron's World," which is a vibrant web collage created as a tribute to the early days of the internet. The website has more than 700 images organized into different themes. Much like a gallery full of old internet stuff, like blinking texts, animated cursors, MIDI files, and nostalgic GIFs. 
+              <p style="text-align: center;">
+                Cameron Askin's creation, "Cameron's World," serves as a digital preservation of the early internet's visual aesthetics. “Cameron’s World” features over 700 images that are all organized into thematic rows. The website essentially works as a curated gallery of the early internet. By putting together a plethora of elements such as, blinking texts, animated cursors, MIDI files, and nostalgic GIFs, Askin not only pays tribute to the internet's formative years but also prompts a reflection on the importance of preserving the unique and often quirky design trends of that time. In crafting this vibrant web collage, Askin acts as a digital curator, preserving the artifacts of the early internet and offering viewers a nostalgic journey through the visual landscape that once defined the online experience.
             </p>
             </div>
           </div>
           <br>
           <br>
+          <p style="text-indent: 25px; font-size: 20px;">
+            Upon close examination of the pieces from Morehshin Allahyari, Antoni Muntadas, and Cameron Askin, a common thread emerges — the profound impact of preservation in our digital age. Allahyari's digital resurrection project not only reconstructs cultural heritage but also challenges our understanding of memory and authenticity in the face of destruction. Muntadas, through "The File Room," directs our attention to the power dynamics in censorship and the need for critical examination of institutional authority. In a different yet equally significant domain, Askin's "Cameron's World" becomes a digital archive, preserving the visual aesthetics of the early internet. Together, these projects reveal the pivotal role of technology in preserving and reshaping all types of history. As we navigate the realms of cultural heritage, censorship, and internet evolution, these endeavors collectively highlight the importance of intentional and thoughtful preservation in our fast-paced and technologically driven world.
+
+        </p>
    </body>
 </html>
