--- a/netartexhibition/index.html
+++ b/netartexhibition/index.html
@@ -45,7 +45,7 @@
    
   <body style="background-image: url('p2.jpg');   background-repeat: no-repeat; background-size: cover;">
         <h1 style="font-size: 100px; text-align: center;">SAVED</h1>
-        <h1 style="font-size: 50px; text-align: center;">CURATED BY ADA LIN</h1>
+        <h1 style="font-size: 30px; text-align: center;">CURATED BY ADA LIN</h1>
         <p style="text-indent: 25px; font-size: 20px;">
             This exhibition features three net.art projects that are united by the common theme of preserving a part of history into an online art piece. Although the subjects of the art projects are drastically different, these artists worked to gather their material to be uniquely presented in net.art form and be interactive either virtually or physically. 
         </p>
@@ -95,7 +95,7 @@
                 </p>
             </div>
             <div class="text">
-              <p style="text-align: center;">
+              <p style="text-indent: 25px;">
                 Cameron Askin's creation, "Cameron's World," serves as a digital preservation of the early internet's visual aesthetics. “Cameron’s World” features over 700 images that are all organized into thematic rows. The website essentially works as a curated gallery of the early internet. By putting together a plethora of elements such as, blinking texts, animated cursors, MIDI files, and nostalgic GIFs, Askin not only pays tribute to the internet's formative years but also prompts a reflection on the importance of preserving the unique and often quirky design trends of that time. In crafting this vibrant web collage, Askin acts as a digital curator, preserving the artifacts of the early internet and offering viewers a nostalgic journey through the visual landscape that once defined the online experience.
             </p>
             </div>
